# vcpkg-starter-template

./: CMakeLists.txt  readme.md  setup-cmake.sh
src/: main.cpp
